# amplitudelib

./: .travis.yml  CMakeLists.txt  Makefile  Makefile.dbg  Makefile.fgi  Makefile.mac  doxygen_config  filelist.m  fragfun.m  isolated_photon  pdf.m
amplitudelib/: CMakeLists.txt  amplitudelib.cpp  amplitudelib.hpp  datafile.cpp  datafile.hpp  dis.cpp  dis.hpp  hybrid.cpp  qcd.cpp  qcd.hpp  single_inclusive.hpp  ugd.cpp  virtual_photon.cpp  virtual_photon.hpp  wave_function.cpp  wave_function.hpp  xs.cpp
doc/: bk_solution_spec.txt
fourier/: fourier.c
fragdata/dss/: PI_DSS14.GRID
fragmentation/: CMakeLists.txt  dss.cpp  dss.hpp  fdss_14.f  fragmentation.cpp  fragmentation.hpp  fragmentation_dss.f  fragmentation_hknsff07.f  fragmentation_pkhff.f  hkns.cpp  hkns.hpp  kkp.cpp  kkp.hpp  pkhff.cpp  pkhff.hpp
pdf/: CMakeLists.txt  CT12Pdf.f  Cteq6Pdf.f  cteq.cpp  cteq.hpp  eps09.cpp  eps09.hpp  eps09_f.f  mrst.cpp  mrst.hpp  pdf.cpp  pdf.hpp  ugdpdf.cpp  ugdpdf.hpp
pdfdata/: ct10n.01.pds  ct10n.02.pds  ct10n.03.pds  ct10n.04.pds  ct10n.05.pds  ct10n.06.pds  ct10n.07.pds  ct10n.08.pds  ct10n.09.pds  ct10n.10.pds  ct10n.11.pds  ct10n.12.pds  ct10n.13.pds  ct10n.14.pds  ct10n.15.pds  ct10n.16.pds  ct10n.17.pds  ct10n.18.pds  ct10n.19.pds  ct10n.20.pds  ct10n.21.pds  ct10n.22.pds  ct10n.23.pds  ct10n.24.pds  ct10n.25.pds  ct10n.26.pds  ct10n.27.pds  ct10n.28.pds  ct10n.29.pds  ct10n.30.pds  ct10n.31.pds  ct10n.32.pds  ct10n.33.pds  ct10n.34.pds  ct10n.35.pds  ct10n.36.pds  ct10n.37.pds  ct10n.38.pds  ct10n.39.pds  ct10n.40.pds  (+12 more)
src/: CMakeLists.txt  amplitude.cpp  castor_xs.cpp  cross_section.cpp  dis.cpp  main.cpp  photon.cpp  photon.hpp
tools/: b_average.py  castor_analysis.ipynb  config.hpp  conformal_to_nonconformal.cpp  create_nukeic.py  f2fit.cpp  glauberize_bksolution.py  interpolation.cpp  interpolation.hpp  interpolation2d.cpp  interpolation2d.hpp  interpolator.cpp  lhcfit.cpp  tester.cpp  tester_bk_creator.py  tools.cpp  tools.hpp
tools/fit/: f2fit.cpp  fit.py  lhcfit.cpp
